[package]
name = "timepour"
version = "0.1.0"
edition = "2024"
authors = ["Hyena0x <https://github.com/Hyena0x>"]
description = "A terminal focus timer that fills the screen with a deterministic tetromino stack."
repository = "https://github.com/Hyena0x/timepour"
license = "MIT"
keywords = ["pomodoro", "timer", "tetris", "cli", "tui"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
